// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders EarningsProjection correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  nimationType="fade"
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "flex": 1,
          "margin": 20,
          "padding": 20,
        }
      }
    >
      <Modal
        animationType="none"
        hardwareAccelerated={false}
        isVisible={false}
        onHide={[Function]}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
      </Modal>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      >
        Earnings projection
      </Text>
      <View
        style={
          Object {
            "borderBottomColor": "#bcbbc1",
            "borderBottomWidth": 0.5,
            "marginVertical": 5,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 10,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomWidth": 1,
                  "borderColor": "#86939e",
                  "flexDirection": "row",
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <TextInput
                editable={false}
                placeholder="Past date"
                placeholderTextColor="#86939e"
                style={
                  Object {
                    "color": "#242424",
                    "flex": 1,
                    "fontSize": 18,
                    "minHeight": 40,
                  }
                }
                testID="RNE__Input__text-input"
                underlineColorAndroid="transparent"
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#ff190c",
                  "fontSize": 12,
                  "margin": 5,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 10,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomWidth": 1,
                  "borderColor": "#86939e",
                  "flexDirection": "row",
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <TextInput
                editable={true}
                onChangeText={[Function]}
                placeholder="Number of market shares"
                placeholderTextColor="#86939e"
                style={
                  Object {
                    "color": "#242424",
                    "flex": 1,
                    "fontSize": 18,
                    "minHeight": 40,
                  }
                }
                testID="RNE__Input__text-input"
                underlineColorAndroid="transparent"
                value="1"
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#ff190c",
                  "fontSize": 12,
                  "margin": 5,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Calculate
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Close
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders ErrorBoundary correctly 1`] = `
<Text>
  Something went wrong.
</Text>
`;

exports[`renders HistoricPriceDailySeries correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  nimationType="fade"
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "flex": 1,
          "margin": 20,
          "padding": 20,
        }
      }
    >
      <Modal
        animationType="none"
        hardwareAccelerated={false}
        isVisible={false}
        onHide={[Function]}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
      </Modal>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      >
        Daily Series Interval
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 10,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomWidth": 1,
                  "borderColor": "#86939e",
                  "flexDirection": "row",
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <TextInput
                editable={false}
                placeholder="Start date"
                placeholderTextColor="#86939e"
                style={
                  Object {
                    "color": "#242424",
                    "flex": 1,
                    "fontSize": 18,
                    "minHeight": 40,
                  }
                }
                testID="RNE__Input__text-input"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#ff190c",
                  "fontSize": 12,
                  "margin": 5,
                }
              }
            />
          </View>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 10,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomWidth": 1,
                  "borderColor": "#86939e",
                  "flexDirection": "row",
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <TextInput
                editable={false}
                placeholder="End date"
                placeholderTextColor="#86939e"
                style={
                  Object {
                    "color": "#242424",
                    "flex": 1,
                    "fontSize": 18,
                    "minHeight": 40,
                  }
                }
                testID="RNE__Input__text-input"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#ff190c",
                  "fontSize": 12,
                  "margin": 5,
                }
              }
            />
          </View>
        </View>
      </View>
      <Text>
        Note: weekends are not valid in this scenario
      </Text>
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Get Data
          </Text>
        </View>
      </View>
      <RCTScrollView
        horizontal={true}
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginVertical": 5,
              }
            }
          />
        </View>
      </RCTScrollView>
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Close
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders ModalStockSeriesDetails daily correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  nimationType="fade"
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "flex": 1,
          "margin": 20,
          "padding": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "marginVertical": 5,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Daily Series
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#bcbbc1",
              "borderBottomWidth": 0.5,
              "marginVertical": 5,
            }
          }
        />
        <View>
          <RCTScrollView
            horizontal={true}
          >
            <View>
              <View>
                <View
                  style={
                    Array [
                      undefined,
                      Object {
                        "borderBottomWidth": 1,
                        "borderColor": "#C1C0B9",
                        "borderLeftWidth": 1,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "width": 430,
                        },
                        Object {
                          "flexDirection": "row",
                          "overflow": "hidden",
                        },
                        undefined,
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "borderColor": "#C1C0B9",
                            "borderRightWidth": 1,
                            "borderTopWidth": 1,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                          Object {
                            "width": 80,
                          },
                          undefined,
                          undefined,
                          false,
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "alignSelf": "center",
                              "fontWeight": "bold",
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ]
                        }
                      >
                        *
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "borderColor": "#C1C0B9",
                            "borderRightWidth": 1,
                            "borderTopWidth": 1,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                          Object {
                            "width": 70,
                          },
                          undefined,
                          undefined,
                          false,
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "alignSelf": "center",
                              "fontWeight": "bold",
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ]
                        }
                      >
                        Open
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "borderColor": "#C1C0B9",
                            "borderRightWidth": 1,
                            "borderTopWidth": 1,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                          Object {
                            "width": 70,
                          },
                          undefined,
                          undefined,
                          false,
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "alignSelf": "center",
                              "fontWeight": "bold",
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ]
                        }
                      >
                        High
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "borderColor": "#C1C0B9",
                            "borderRightWidth": 1,
                            "borderTopWidth": 1,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                          Object {
                            "width": 70,
                          },
                          undefined,
                          undefined,
                          false,
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "alignSelf": "center",
                              "fontWeight": "bold",
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ]
                        }
                      >
                        Low
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "borderColor": "#C1C0B9",
                            "borderRightWidth": 1,
                            "borderTopWidth": 1,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                          Object {
                            "width": 70,
                          },
                          undefined,
                          undefined,
                          false,
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "alignSelf": "center",
                              "fontWeight": "bold",
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ]
                        }
                      >
                        Close
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "borderColor": "#C1C0B9",
                            "borderRightWidth": 1,
                            "borderTopWidth": 1,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                          Object {
                            "width": 70,
                          },
                          undefined,
                          undefined,
                          false,
                          undefined,
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "alignSelf": "center",
                              "fontWeight": "bold",
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ]
                        }
                      >
                        Volume
                      </Text>
                    </View>
                  </View>
                </View>
                <RCTScrollView
                  style={
                    Object {
                      "marginTop": -1,
                    }
                  }
                >
                  <View>
                    <View
                      style={
                        Array [
                          undefined,
                          Object {
                            "borderBottomWidth": 1,
                            "borderColor": "#C1C0B9",
                            "borderLeftWidth": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </RCTScrollView>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Close
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders ModalStockSeriesDetails intraday correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  nimationType="fade"
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "flex": 1,
          "margin": 20,
          "padding": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "marginVertical": 5,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Intraday Series
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#bcbbc1",
              "borderBottomWidth": 0.5,
              "marginVertical": 5,
            }
          }
        />
        <ActivityIndicator
          color="blue"
          size={20}
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Close
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 5,
      "marginVertical": 10,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        editable={true}
        onChangeText={[Function]}
        placeholder="Search a stock"
        placeholderTextColor="#86939e"
        style={
          Object {
            "color": "#242424",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <Text
      style={
        Object {
          "color": "#ff190c",
          "fontSize": 12,
          "margin": 5,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "left": 20,
        "position": "absolute",
        "top": 50,
        "width": "90%",
        "zIndex": 2,
      }
    }
  />
</View>
`;

exports[`renders dashboard correctly 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 5,
      "marginVertical": 10,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        editable={true}
        onChangeText={[Function]}
        placeholder="Search a stock"
        placeholderTextColor="#86939e"
        style={
          Object {
            "color": "#242424",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <Text
      style={
        Object {
          "color": "#ff190c",
          "fontSize": 12,
          "margin": 5,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "left": 20,
        "position": "absolute",
        "top": 50,
        "width": "90%",
        "zIndex": 2,
      }
    }
  />
</View>
`;

exports[`renders portfolio correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  nimationType="fade"
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "flex": 1,
          "margin": 20,
          "padding": 20,
        }
      }
    >
      <Modal
        animationType="none"
        hardwareAccelerated={false}
        isVisible={false}
        onHide={[Function]}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
      </Modal>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      >
        Earnings projection
      </Text>
      <View
        style={
          Object {
            "borderBottomColor": "#bcbbc1",
            "borderBottomWidth": 0.5,
            "marginVertical": 5,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 10,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomWidth": 1,
                  "borderColor": "#86939e",
                  "flexDirection": "row",
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <TextInput
                editable={false}
                placeholder="Past date"
                placeholderTextColor="#86939e"
                style={
                  Object {
                    "color": "#242424",
                    "flex": 1,
                    "fontSize": 18,
                    "minHeight": 40,
                  }
                }
                testID="RNE__Input__text-input"
                underlineColorAndroid="transparent"
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#ff190c",
                  "fontSize": 12,
                  "margin": 5,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 10,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomWidth": 1,
                  "borderColor": "#86939e",
                  "flexDirection": "row",
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <TextInput
                editable={true}
                onChangeText={[Function]}
                placeholder="Number of market shares"
                placeholderTextColor="#86939e"
                style={
                  Object {
                    "color": "#242424",
                    "flex": 1,
                    "fontSize": 18,
                    "minHeight": 40,
                  }
                }
                testID="RNE__Input__text-input"
                underlineColorAndroid="transparent"
                value="1"
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#ff190c",
                  "fontSize": 12,
                  "margin": 5,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Calculate
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Close
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
